<resources>
    <string name="app_name">CalculadoraApp</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="b0">0</string>
    <string name="bpunto">.</string>
    <string name="bsum">+</string>
    <string name="bresta">-</string>
    <string name="bmult">x</string>
    <string name="bdiv">/</string>
    <string name="beq">=</string>
    <string name="blimp">CA</string>

</resources>
